# font-awesome-icon-packs

./: .gitignore  app.js  index.html  pyproject.toml  readme.md  style.css
.github/workflows/: render-all-icon_packs.yml  render-icon-pack.yml
config/: config.json  stream_deck.json  stream_dock.json
data/: packs.json
src/: consts.py  renderer.py
templates/: card.mustache
